# AdventOfCode2024

./: Cargo.toml  README.md
data/: input.txt
src/: main.rs  prelude.rs  puzzle1.rs  puzzle10.rs  puzzle11.rs  puzzle12.rs  puzzle13.rs  puzzle14.rs  puzzle15.rs  puzzle16.rs  puzzle17.rs  puzzle18.rs  puzzle19.rs  puzzle2.rs  puzzle20.rs  puzzle21.rs  puzzle22.rs  puzzle23.rs  puzzle24.rs  puzzle25.rs  puzzle3.rs  puzzle4.rs  puzzle5.rs  puzzle6.rs  puzzle7.rs  puzzle8.rs  puzzle9.rs
