[package]
name = "AdventOfCode2024"
version = "0.1.0"
edition = "2021"

[dependencies]
gcd = "2.3.0"
ndarray = "0.15.6"
ndarray-linalg =  { version = "0.16.0", features = ["openblas-static"] }
regex = "1.11.1"
time = "0.3.37"


[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
